.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Type_Queue_Zone__c.object
<CustomObject>
    <fields>
        <fullName>Incap311__Is_Coordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Coordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Service Type Queue Zones</relationshipLabel>
        <relationshipName>Service_Type_Queues_Members_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>Incap311__Zone__c</referenceTo>
        <relationshipName>Service_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Type Queue Zone</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SVCZ-{00000000}</displayFormat>
        <label>Service Zone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Type Queue Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>